--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                     <h3>Contact us</h3>
                     <h3>Store</h3>
                     <h3>Address</h3>
+                    </div>
                     
              
-                </div></div>
+                </div>
             <div class="content">
                 <div class="left">
                     <h2>Wonderfull nature place trep by Gail Gas pvt L.T.D goa beach </h2>
